--- a/app/css/main.css
+++ b/app/css/main.css
@@ -140,6 +140,57 @@ body {
   overflow-x: hidden;
   background-color: #fbfbfb;
 }
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fbfbfb;
+  z-index: 4;
+  transition: 1s;
+  opacity: 1;
+  visibility: visible;
+}
+.preloader__hide {
+  opacity: 0;
+  visibility: hidden;
+}
+.loader {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #725ceb;
+  border-left-color: #fbfbfb;
+  border-radius: 100%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: 1s linear infinite preloader;
+          animation: 1s linear infinite preloader;
+}
+@-webkit-keyframes preloader {
+  0% {
+    -webkit-transform: translate(-50%, -50%) rotate(0);
+            transform: translate(-50%, -50%) rotate(0);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+@keyframes preloader {
+  0% {
+    -webkit-transform: translate(-50%, -50%) rotate(0);
+            transform: translate(-50%, -50%) rotate(0);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
 .container {
   max-width: 1268px;
   margin: 0 auto;
@@ -148,6 +199,26 @@ body {
   padding: 35px 56px;
   display: flex;
   align-items: center;
+}
+.headhesive {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+  transition: 0.3s;
+  background-color: #fff;
+  z-index: 3;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  box-shadow: 0px 15px 50px rgba(114, 92, 235, 0.08);
+}
+.headhesive--stick {
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
 }
 .head__links {
   display: flex;
@@ -229,6 +300,10 @@ body {
   font-weight: 600;
   cursor: pointer;
   display: inline-block;
+  transition: 0.3s;
+}
+.btn:hover {
+  opacity: 0.9;
 }
 .separator {
   max-width: 961px;
