--- a/app/less/main.less
+++ b/app/less/main.less
@@ -21,6 +21,43 @@ body {
     background-color: #fbfbfb;
 }
 
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fbfbfb;
+    z-index: 4;
+    transition: 1s;
+    opacity: 1;
+    visibility: visible;
+}
+.preloader__hide {
+    opacity: 0;
+    visibility: hidden;
+}
+.loader {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #725ceb;
+    border-left-color: #fbfbfb;
+    border-radius: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    animation: 1s linear infinite preloader;
+}
+@keyframes preloader {
+    0% {
+        transform: translate(-50%, -50%) rotate(0);
+    }
+    100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+
 .container {
     max-width: 1268px;
     margin: 0 auto;
@@ -33,7 +70,22 @@ body {
     // max-width: 1920px;
     // margin: 0 auto;
 }
-
+.headhesive {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    transform: translateY(-100%);
+    transition: 0.3s;
+    background-color: #fff;
+    z-index: 3;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    box-shadow: 0px 15px 50px rgba(114, 92, 235, 0.08);
+}
+.headhesive--stick {
+    transform: translateY(0);
+}
 .head__links {
     display: flex;
     align-items: center;
@@ -131,6 +183,10 @@ body {
     font-weight: 600;
     cursor: pointer;
     display: inline-block;
+    transition: 0.3s;
+    &:hover {
+        opacity: 0.9;
+    }
 }
 
 .separator {
