--- a/app/nunjucks/layouts/_main.html
+++ b/app/nunjucks/layouts/_main.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
         <title>{{ title }}</title>
         <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
         <link rel="stylesheet" href="css/owl.carousel.min.css" />
         <link rel="stylesheet" href="fonts/stylesheet.css" />
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/media.css" />
     </head>
 
     <body>
@@ -18,11 +20,16 @@
                 <a href="/" class="head__logo">
                     <img src="img/logo.png" alt="" />
                 </a>
+                <div class="head__hamburger">
+                    <img src="img/hamburger.svg" alt="" />
+                </div>
                 <ul class="head__links">
                     <li><a href="about-as.html">О нас </a></li>
                     <li><a href="vacancies.html">Вакансии</a></li>
                     <li><a href="regulations.html">Правила</a></li>
-                    <li><a href="">Вопросы</a></li>
+                    <li>
+                        <a data-role="scroll" href="/#questions">Вопросы</a>
+                    </li>
                 </ul>
             </div>
             {% block content %} {% endblock %}
@@ -43,7 +50,7 @@
                                 type="text"
                                 placeholder="Ваш номер телефона"
                             />
-                            <button class="btn">Присоединиться</button>
+                            <button class="btn orange">Присоединиться</button>
                         </form>
                     </div>
                     <!--================================================= separator ===========================================-->
@@ -90,11 +97,29 @@
                 </div>
             </div>
             <!--=================================================END footer ===========================================-->
+            <!--================================================= mobilenav ===========================================-->
+            <div class="mobilenav">
+                <div class="mobilenav__head">
+                    <div class="mobilenav__title">Меню</div>
+                    <img class="mobilenav__close" src="img/close.svg" alt="" />
+                </div>
+                <ul class="mobilenav__links">
+                    <li><a href="/">Главная</a></li>
+                    <li><a href="about-as.html">О нас </a></li>
+                    <li><a href="vacancies.html">Вакансии</a></li>
+                    <li><a href="regulations.html">Правила</a></li>
+                    <li>
+                        <a data-role="scroll" href="/#questions">Вопросы</a>
+                    </li>
+                </ul>
+            </div>
+            <!--=================================================END mobilenav ===========================================-->
         </div>
         <script src="js/jquery.js"></script>
         <script src="js/jquery.fancybox.min.js"></script>
         <script src="js/owl.carousel.min.js"></script>
         <script src="js/headhesive.min.js"></script>
+        <script src="js/scroll.js"></script>
         <script src="js/main.js"></script>
         <script>
             document.body.onload = function () {
