--- a/app/less/main.less
+++ b/app/less/main.less
@@ -328,7 +328,7 @@ body {
     left: 24px;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 45%;
+    background-size: contain;
 }
 
 .sec__desc {
