--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -427,7 +427,7 @@ body {
   left: 24px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 45%;
+  background-size: contain;
 }
 .sec__desc {
   text-align: center;
