--- a/app/less/main.less
+++ b/app/less/main.less
@@ -228,7 +228,8 @@ body {
     top: 400px;
     left: 50%;
     transform: translateX(-50%);
-    width: 1920px;
+    //width: 1920px;
+    width: 100%;
 }
 
 .how__work__triangle {
@@ -356,6 +357,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     width: 1920px;
+    width: 100%;
 }
 
 .start__work__item {
@@ -556,7 +558,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
-    width: 1920px;
+    //width: 1920px;
 }
 
 .mobile__app__img {
