--- a/app/nunjucks/layouts/_main.html
+++ b/app/nunjucks/layouts/_main.html
@@ -18,7 +18,7 @@
             </section>
             <div class="head">
                 <a href="/" class="head__logo">
-                    <img src="img/logo.png" alt="" />
+                    <img src="img/logo.svg" alt="" />
                 </a>
                 <div class="head__hamburger">
                     <img src="img/hamburger.svg" alt="" />
@@ -30,6 +30,7 @@
                     <li>
                         <a data-role="scroll" href="/#questions">Вопросы</a>
                     </li>
+                    <li><a href="login.html">Авторизация</a></li>
                 </ul>
             </div>
             {% block content %} {% endblock %}
