--- a/app/nunjucks/layouts/_main.html
+++ b/app/nunjucks/layouts/_main.html
@@ -112,6 +112,7 @@
                     <li>
                         <a data-role="scroll" href="/#questions">Вопросы</a>
                     </li>
+                    <li><a href="login.html">Авторизация</a></li>
                 </ul>
             </div>
             <!--=================================================END mobilenav ===========================================-->
