--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1119,3 +1119,35 @@ body {
         display: block;
     }
 }
+
+.error404 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 600px;
+    margin-top: 0;
+    position: relative;
+}
+.error404__triangle {
+    position: absolute;
+    left: 50%;
+    bottom: 20%;
+    transform: translateX(-50%);
+}
+.error404__lines-1 {
+    position: absolute;
+    left: 50%;
+    top: -700px;
+    transform: translateX(-50%);
+    width: 100%;
+}
+.error404__lines-2 {
+    position: absolute;
+    left: 50%;
+    top: 400px;
+    transform: translateX(-50%);
+    width: 100%;
+}
+.error404__img {
+    max-width: 80%;
+}
