--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1187,3 +1187,40 @@ body {
   border-top: 1px solid #dfdfdf;
   display: block;
 }
+.error404 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 600px;
+  margin-top: 0;
+  position: relative;
+}
+.error404__triangle {
+  position: absolute;
+  left: 50%;
+  bottom: 20%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+}
+.error404__lines-1 {
+  position: absolute;
+  left: 50%;
+  top: -700px;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 100%;
+}
+.error404__lines-2 {
+  position: absolute;
+  left: 50%;
+  top: 400px;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 100%;
+}
+.error404__img {
+  max-width: 80%;
+}
